Button [FIX] Chrome icon overflow dirty fix. More research needed on this point.

--- a/src/core/elements/_button.less
+++ b/src/core/elements/_button.less
@@ -438,7 +438,7 @@
 		top: 50%; left: 50%;
 		-ms-transform: translate(-50%, -150%);
 		transform: translate(-50%, -150%);
-		width: 1.1em; height: 1em; // Chrome fix
+		width: 1.1em; height: 1.1em; // Chrome fix
 	}
 
 	// loading
